--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ fastapi==0.88.0
 
 uvicorn==0.20.0
 
-joblib==1.2.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.11.0+cpu
 
-pytorch==1.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.12.0+cpu
